--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.0",
+    "firebase": "^8.0.0",
     "next": "^9.5.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
